DataTransfer modifier: Impossible to set multiple transfer modes by script (if they're on different properties) #46522

Closed
opened 2015-10-17 21:54:13 +02:00 by Simon Repp · 8 comments

System Information
Ubuntu 15.04 / Nvidia GTX970 (irrelevant)

Blender Version
Broken: 2.76 e9b9b88
Worked: (Unknown - probably a long standing issue)

Short description of error

In the interface the DataTransfer modifier lets the user select multiple transfer options by shift-clicking,
it appears the way this was implemented prevents setting multiple transfer options by script if they're on different properties.

vvvvvv Easiest way to understand the problem is to read and run the script below vvvvvv

(A longer description and the prior effort to resolve this can be found in this Blender SE post (which lead to no solution and one recommendation to report this as a bug)
http://blender.stackexchange.com/questions/39429/setting-enum-properties-across-multiple-interdependent-enum-properties-in-a-scri)

Exact steps for others to reproduce the error

In the default scene (with the cube still there) read and then run this script, observe what it prints:

import bpy

# Get the default cube, make it active, add DataTransfer modifier
cube = bpy.data.objects["Cube"]
bpy.context.scene.objects.active = cube
bpy.ops.object.modifier_add(type='DATA_TRANSFER')

# Enable transfer of sharp edges and UV seams on the modifier
cube.modifiers["DataTransfer"].data_types_edges = {'SHARP_EDGE', 'SEAM'}

print(cube.modifiers["DataTransfer"].data_types_edges) # returns {'SHARP_EDGE', 'SEAM'}

# Additionally enable transfer of UV coordinates on the modifier
cube.modifiers["DataTransfer"].data_types_loops_uv = {'UV'}

print(cube.modifiers["DataTransfer"].data_types_edges) # returns an empty set() now (!)
print(cube.modifiers["DataTransfer"].data_types_loops_uv) # returns {'UV'}
**System Information** Ubuntu 15.04 / Nvidia GTX970 (irrelevant) **Blender Version** Broken: 2.76 e9b9b88 Worked: (Unknown - probably a long standing issue) **Short description of error** In the interface the DataTransfer modifier lets the user select multiple transfer options by shift-clicking, it appears the way this was implemented prevents setting multiple transfer options by script if they're on different properties. vvvvvv Easiest way to understand the problem is to read and run the script below vvvvvv (A longer description and the prior effort to resolve this can be found in this Blender SE post (which lead to no solution and one recommendation to report this as a bug) http://blender.stackexchange.com/questions/39429/setting-enum-properties-across-multiple-interdependent-enum-properties-in-a-scri) **Exact steps for others to reproduce the error** In the default scene (with the cube still there) read and then run this script, observe what it prints: ``` import bpy # Get the default cube, make it active, add DataTransfer modifier cube = bpy.data.objects["Cube"] bpy.context.scene.objects.active = cube bpy.ops.object.modifier_add(type='DATA_TRANSFER') # Enable transfer of sharp edges and UV seams on the modifier cube.modifiers["DataTransfer"].data_types_edges = {'SHARP_EDGE', 'SEAM'} print(cube.modifiers["DataTransfer"].data_types_edges) # returns {'SHARP_EDGE', 'SEAM'} # Additionally enable transfer of UV coordinates on the modifier cube.modifiers["DataTransfer"].data_types_loops_uv = {'UV'} print(cube.modifiers["DataTransfer"].data_types_edges) # returns an empty set() now (!) print(cube.modifiers["DataTransfer"].data_types_loops_uv) # returns {'UV'} ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @simonrepp

Added subscriber: @simonrepp

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29

Yeah… The problem here is that, for UI reasons, we are creating several 'virtual' RNA properties out of a single real DNA var (data_types). Now, UI code (toggle buttons) is smart enough to only affect the bit matching the affected button, without changing the remaining part of the value (the other enum flags). Python/RNA direct setters always overwrite the whole 32bits, though.

@ideasman42 need your advice here. We could be smart and ensure we only ever overwrite the bits actually 'used' by a given RNA enum, and not all 32 ones. Or we can take the easy road and simply add a 'all data types' RNA property here for scripts?

Yeah… The problem here is that, for UI reasons, we are creating several 'virtual' RNA properties out of a single real DNA var (`data_types`). Now, UI code (toggle buttons) is smart enough to only affect the bit matching the affected button, without changing the remaining part of the value (the other enum flags). Python/RNA direct setters always overwrite the whole 32bits, though. @ideasman42 need your advice here. We could be smart and ensure we only ever overwrite the bits actually 'used' by a given RNA enum, and not all 32 ones. Or we can take the easy road and simply add a 'all data types' RNA property here for scripts?
Bastien Montagne self-assigned this 2015-10-18 11:46:02 +02:00

OK, have fix for this (we'll get rid of those stupid data_types_loops_uv, data_types_loops_vcol & co, those were added only for UI purpose.

Spent most of today on it, our UI 'align' computing code is actually broken currently for complex mixing of vertical and horizontal layouts (especially in column-major case), and we need such layout here… Hope to have working fix in coming days.

OK, have fix for this (we'll get rid of those stupid `data_types_loops_uv`, `data_types_loops_vcol` & co, those were added only for UI purpose. Spent most of today on it, our UI 'align' computing code is actually broken currently for complex mixing of vertical and horizontal layouts (especially in column-major case), and we need such layout here… Hope to have working fix in coming days.
Author

Hey Bastien - so quick, thank you so much for the effort!
All these different properties were quite a hassle to work with anyway, so them going away is a good prospect in two senses even :)

Hey Bastien - so quick, thank you so much for the effort! All these different properties were quite a hassle to work with anyway, so them going away is a good prospect in two senses even :)

This issue was referenced by 02f3cebf6e

This issue was referenced by 02f3cebf6e4cc13f58b5198988672e99b8aac6fc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46522
No description provided.